Actualizando registro de usuarios y confirmación de emails via tokens

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI = mongodb+srv://SnowDevMartin:z5CMRIuh5MI35ssI@cluster0.hs3p3ae.mongodb.net/uptask?retryWrites=true&w=majority
 
 JWT_SECRET = palabraSECRETA
+
+FRONTEND_URL = http://localhost:5173
