--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.2.0",
 		"mongoose": "^8.0.0",
-		"nodemailer": "^6.9.7"
+		"nodemailer": "^6.9.7",
+		"socket.io": "^4.7.2"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
