--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
+		"socket.io-client": "^4.7.2",
 		"sonner": "^1.2.2"
 	},
 	"devDependencies": {
